<?xml version="1.0"?>

<package format="2">
  <name>behavior_based</name>
  <version>0.0.14</version>

  <description>
    Behavior-based robotics libraries for ROS.
  </description>

  <maintainer email="httperror@404-notfound.jp">
    Yamasaki Tatsuya
  </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>

